# numerical-jax-project

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cloud/: demo2_pretrained_vit_tpu_workflow.md  demo2_tpu_quickstart.md  demo2_vit_tpu_workflow.md
docs/: demo2_pretrained_vit.md  pretrained_vit_demo.md
examples/: cnn_mnist_benchmark.py  demo2_pretrained_vit_finetune.py  pretrained_vit_inference.py
examples/assets/: README.md  manifest.txt
report/: current_status.md  google_cloud_trc_setup.md  presentation_plan.md  progress_log.md  progress_report_demo2_jax_sharding_multitpu.ipynb  progress_report_demo2_tpu_current.ipynb  progress_report_pre_tpu.md
report/results/: README.md  demo2_cloud_imagenette320_val256_tpu.md  demo2_cloud_imagenette320_val256_tpu_sharded_v6e8.md  demo2_cloud_imagenette320_val256_tpu_single_v6e1.md  demo2_cloud_imagenette320_val64_tpu.md  demo2_cloud_imagenette320_valfull_tpu.md  demo2_cloud_imagenette320_valfull_tpu_sharded_v6e8.md  demo2_cloud_imagenette320_valfull_tpu_single_v6e1.md  demo2_cloud_vit_head_finetune_tpu_resume_gcs.md  demo2_cpu_machine_comparison.md  demo2_imagenette320_batch_scaling.md  (+18 more)
scripts/: build_image_manifest.py  check_jax_device.sh  compare_vit_results.py  demo2_tpu_run_when_active.sh  generate_vit_summary_tables.py
tests/: test_build_image_manifest.py  test_cnn_mnist.py  test_compare_vit_results.py  test_demo2_pretrained_vit_finetune.py  test_demo2_tpu_helper.py  test_generate_vit_summary_tables.py  test_pretrained_vit_inference.py  test_runtime.py  test_sharding.py
(+5 files in other folders)
