[project]
name = "numerical-jax-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anthroplankton", email = "16691184+anthroplankton@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
jax-tpu-project = "jax_tpu_project.cli:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jax_tpu_project"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
pretrained = [
    "flax",
    "huggingface-hub",
    "pillow",
    "transformers<5",
]
training = [
    "optax",
    "orbax-checkpoint",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
